test/files/neg/t3015.check
t3015.scala:7: error: scrutinee is incompatible with pattern type;
 found   : _$1
 required: String
  val b(foo) = "foo" 
       ^
error: type mismatch;
 found   : _$1
 required: String
two errors found
